--- a/css/style.css
+++ b/css/style.css
@@ -3,25 +3,24 @@
 }
 
 body {
-  background-color: #14131a;
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
 
 .container {
   margin: auto;
-  max-width: 71.25rem;
+  max-width: 71.25em;
 }
 
 .header {
-  margin-bottom: 5rem;
-  padding-top: 2.5rem;
+  margin-bottom: 5em;
+  padding-top: 2.5em;
   display: flex;
   align-items: center;
 }
 
 .logo__link {
-  margin-right: 3.125rem;
+  margin-right: 3.125em;
   display: inline-block;
 }
 
@@ -34,7 +33,7 @@ body {
 }
 
 .nav__menu--item {
-  margin-right: 1.875rem;
+  margin-right: 1.875em;
 }
 
 .nav__menu--link {
@@ -43,7 +42,7 @@ body {
 }
 
 .movie__date {
-  margin-bottom: 2.375rem;
+  margin-bottom: 1.583em;
   display: block;
 
   font-size: 1.5rem;
@@ -52,12 +51,52 @@ body {
 }
 
 .movie__description {
-  margin-top: 2.5rem;
-  max-width: 26.44rem;
+  margin-top: 2.5em;
+  max-width: 26.44em;
 
   font-size: 1rem;
   line-height: 1.4;
   color: rgba(255, 255, 255, .8);
+}
+
+.button__group {
+  margin-top: 4.375em;
+}
+
+.button {
+  padding: .938em 1.875em;
+
+  border: none;
+  border-radius: .312em;
+  cursor: pointer;
+}
+
+.button__icon,
+.button__text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.button__text {
+  margin-left: .715em;
+
+  font-size: .875rem;
+  line-height: 1.14;
+}
+
+.button__link {
+  color: #fff;
+}
+
+.venom {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.blood {
+  background: url('../images/blood.png') no-repeat top right,
+    #14131a url('../images/background.jpg') no-repeat 0 0 / cover;
 }
 
 /* ==================== fonts ==================== */
