--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,23 @@ body {
   background-color: #14131a;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
   margin: auto;
-  max-width: 71.25em;
+  /* max-width: 71.25em; */
+  width: 90%;
+}
+
+.venom {
+  max-width: 45.5em;
+  width: 40%;
+
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .header {
@@ -44,7 +58,7 @@ body {
 }
 
 .movie__date {
-  margin-bottom: 1.583em;
+  margin-bottom: 2%;
   display: block;
 
   font-size: 1.5rem;
@@ -52,8 +66,12 @@ body {
   color: rgba(255, 255, 255, .8);
 }
 
+.movie__logo {
+  width: 70%;
+}
+
 .movie__description {
-  margin-top: 2.5em;
+  margin-top: 3%;
   max-width: 26.44em;
 
   font-size: 1rem;
@@ -62,11 +80,13 @@ body {
 }
 
 .button__group {
-  margin-top: 4.375em;
+  margin-top: 5%;
 }
 
 .button {
   padding: .938em 1.875em;
+
+  text-decoration: none;
 
   border: none;
   border-radius: .312em;
@@ -86,18 +106,18 @@ body {
   line-height: 1.14;
 }
 
+.button__primary {
+  color: #8d0019;
+
+  background-color: #fff;
+}
+
 .button__link {
   color: #fff;
 }
 
-.venom {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
 .blood {
-  background: url('../images/blood.png') no-repeat top right,
+  background: url('../images/blood.png') no-repeat top right 40%,
     url('../images/background.jpg') no-repeat 0 0 / cover;
 }
 
@@ -205,6 +225,167 @@ body {
 }
 
 /* ==================== End of about page ==================== */
+
+
+
+.menu__button {
+  display: none;
+}
+
+.menu__close {
+  display: none;
+}
+
+/* ==================== @media ==================== */
+
+@media (max-width: 1024px) {
+
+  .content {
+    flex-direction: column;
+    padding-bottom: 5%;
+  }
+
+  .col {
+    margin-bottom: 5%;
+  }
+
+  .header {
+    margin-bottom: 4%;
+  }
+
+  .movie {
+    margin-top: 20%;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .blood {
+    background: #14131a;
+  }
+
+  .venom {
+    top: 10%;
+  }
+}
+
+@media (max-width: 576px) {
+
+  .venom {
+    top: 20%;
+    width: 30%;
+  }
+
+  .nav {
+    margin-left: auto;
+  }
+
+  .nav__menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+    background-color: #fff;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    transform: translateX(100%);
+    transition: transform .2s linear;
+  }
+
+  .nav__menu--item {
+    margin: 2% 0;
+  }
+
+  .nav__menu--link {
+
+    color: #14131a;
+  }
+
+  .menu__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .625rem;
+
+    color: #fff;
+
+    background-color: #14131a;
+    border: none;
+    cursor: pointer;
+  }
+
+  .menu__button--text {
+    margin-right: 0.625rem;
+  }
+
+  .menu__close {
+    display: flex;
+    align-items: center;
+
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+
+    position: fixed;
+    top: 65px;
+    right: 25px;
+    z-index: 3;
+
+    opacity: 0;
+    transform: translateX(150%);
+    transition: transform .2s linear;
+    transition-delay: .4s;
+  }
+
+  .is-active {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .button__group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .movie__description {
+    text-align: center;
+  }
+
+  .poster__wrapper {
+    flex-direction: column;
+  }
+
+  .poster {
+    margin-bottom: 4%;
+  }
+
+  .content .trailer {
+    max-width: 21.875rem;
+    width: 100%;
+  }
+
+  .poster {
+    margin-right: 0;
+    max-width: 21.875rem;
+    width: 100%;
+  }
+
+  .column-2 {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+}
+
+/* ==================== End @media ==================== */
 
 
 
