--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,15 @@ img {
   color: rgba(255, 255, 255, .5);
 }
 
+.nav__menu--link:hover,
+.nav__menu--link:focus {
+  color: rgba(255, 255, 255, .7);
+}
+
+.nav__menu--link:active {
+  color: rgba(255, 255, 255, .9);
+}
+
 .movie__date {
   margin-bottom: 2%;
   display: block;
@@ -492,12 +501,14 @@ img {
   }
 
   .nav__menu--item {
-    margin: 2% 0;
+    margin: 5%;
+
+    font-size: 2rem;
+    font-weight: 700;
   }
 
   .nav__menu--link {
-
-    color: #14131a;
+    color: #110842;
   }
 
   .menu__button {
@@ -520,6 +531,8 @@ img {
   .menu__close {
     display: flex;
     align-items: center;
+
+    font-size: 1.5rem;
 
     background-color: #fff;
     border: none;
