--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ img {
 
 .change-lang {
   width: 60px;
-  font-size: inherit;
+  font-size: 1rem;
   color: rgba(255, 255, 255, .5);
   background-color: inherit;
   border: 1px solid transparent;
