--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ img {
 
 .actor__about {
   margin-bottom: 10px;
+  margin-right: 20px;
   display: flex;
 }
 
@@ -702,6 +703,16 @@ img {
     -webkit-column-count: 1;
     -moz-column-count: 1;
     column-count: 1;
+  }
+
+  .actor__foto {
+    width: 65px;
+    height: 65px;
+  }
+
+  .actor__info {
+    padding-left: 10px;
+    font-size: 1rem;
   }
 }
 
